# bytetrack_cpp

./: CMakeLists.txt  README.md  demo.cpp
include/: bytetrack.h  detector.h
src/: bytetrack.cpp  detector.cpp  kalman_filter.cpp
